# pointpillar_ros_version

./: CMakeLists.txt  package.xml  readme.md
install/: local_setup.sh  setup.sh
install/lidar_detection/lib/lidar_detection/: trt_infer_node
install/lidar_detection/share/lidar_detection/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lidar_detection/share/lidar_detection/cmake/: lidar_detectionConfig.cmake
log/: latest_build
src/trt_infer/: test.txt  trt_infer.cpp  trt_infer_node.cpp  trt_infer_node_1.cpp  trt_infer_node_fileresult.cpp
